cmake_minimum_required(VERSION 3.16)

project(CppProjectTemplate VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Assignments)
add_subdirectory(Section_03_Environment_Setup)
#add_subdirectory(Section_07_Diving_In)
#add_subdirectory(Section_08_Variables_and_Data_Types)
#add_subdirectory(Section_12_Bitwise_Operators)
